docs-archive/apache-airflow-providers-apache-hive/9.1.2/_sources/_api/airflow/providers/apache/hive/operators/hive/index.rst.txt
airflow.providers.apache.hive.operators.hive
============================================

.. py:module:: airflow.providers.apache.hive.operators.hive


Classes
-------

.. autoapisummary::

   airflow.providers.apache.hive.operators.hive.HiveOperator


Module Contents
---------------

.. py:class:: HiveOperator(*, hql, hive_cli_conn_id = 'hive_cli_default', schema = 'default', hiveconfs = None, hiveconf_jinja_translate = False, script_begin_tag = None, mapred_queue = None, mapred_queue_priority = None, mapred_job_name = None, hive_cli_params = '', auth = None, proxy_user = None, **kwargs)

   Bases: :py:obj:`airflow.providers.apache.hive.version_compat.BaseOperator`


   Executes hql code or hive script in a specific Hive database.

   :param hql: the hql to be executed. Note that you may also use
       a relative path from the dag file of a (template) hive
       script. (templated)
   :param hive_cli_conn_id: Reference to the
       :ref:`Hive CLI connection id <howto/connection:hive_cli>`. (templated)
   :param hiveconfs: if defined, these key value pairs will be passed
       to hive as ``-hiveconf "key"="value"``
   :param hiveconf_jinja_translate: when True, hiveconf-type templating
       ${var} gets translated into jinja-type templating {{ var }} and
       ${hiveconf:var} gets translated into jinja-type templating {{ var }}.
       Note that you may want to use this along with the
       ``DAG(user_defined_macros=myargs)`` parameter. View the DAG
       object documentation for more details.
   :param script_begin_tag: If defined, the operator will get rid of the
       part of the script before the first occurrence of `script_begin_tag`
   :param mapred_queue: queue used by the Hadoop CapacityScheduler. (templated)
   :param mapred_queue_priority: priority within CapacityScheduler queue.
       Possible settings include: VERY_HIGH, HIGH, NORMAL, LOW, VERY_LOW
   :param mapred_job_name: This name will appear in the jobtracker.
       This can make monitoring easier.
   :param hive_cli_params: parameters passed to hive CLO
   :param auth: optional authentication option passed for the Hive connection
   :param proxy_user: Run HQL code as this user.


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]
      :value: ('hql', 'schema', 'hive_cli_conn_id', 'mapred_queue', 'hiveconfs', 'mapred_job_name',...



   .. py:attribute:: template_ext
      :type:  collections.abc.Sequence[str]
      :value: ('.hql', '.sql')



   .. py:attribute:: template_fields_renderers


   .. py:attribute:: ui_color
      :value: '#f0e4ec'



   .. py:attribute:: hql


   .. py:attribute:: hive_cli_conn_id
      :value: 'hive_cli_default'



   .. py:attribute:: schema
      :value: 'default'



   .. py:attribute:: hiveconfs


   .. py:attribute:: hiveconf_jinja_translate
      :value: False



   .. py:attribute:: script_begin_tag
      :value: None



   .. py:attribute:: mapred_queue
      :value: None



   .. py:attribute:: mapred_queue_priority
      :value: None



   .. py:attribute:: mapred_job_name
      :value: None



   .. py:attribute:: hive_cli_params
      :value: ''



   .. py:attribute:: auth
      :value: None



   .. py:attribute:: proxy_user
      :value: None



   .. py:attribute:: mapred_job_name_template
      :type:  str


   .. py:property:: hook
      :type: airflow.providers.apache.hive.hooks.hive.HiveCliHook


      Get Hive cli hook.



   .. py:method:: prepare_template()

      Execute after the templated fields get replaced by their content.

      If you need your object to alter the content of the file before the
      template is rendered, it should override this method to do so.



   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used as when rendering jinja templates.

      Refer to get_template_context for more context.



   .. py:method:: dry_run()

      Perform dry run for the operator - just render template fields.



   .. py:method:: on_kill()

      Override this method to clean up subprocesses when a task instance gets killed.

      Any use of the threading, subprocess or multiprocessing module within an
      operator needs to be cleaned up, or it will leave ghost processes behind.



   .. py:method:: clear_airflow_vars()

      Reset airflow environment variables to prevent existing ones from impacting behavior.



